--- a/styly.css
+++ b/styly.css
@@ -1,1 +1,55 @@
+html {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 400px;
 
+}
+
+
+.contejner {
+  text-align: center;
+  justify-content: center;
+}
+
+.image img {
+  display: block;
+  width: 100%;
+
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.info__nadpis {}
+
+.info__text {
+  flex: 2;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+
+
+
+
+}
+
+.buttons__rules {
+  margin: 0;
+  border: 2px solid black;
+  padding: 10px;
+
+
+}
+
+.buttons__play {
+  margin: 0;
+  border: 2px solid black;
+  padding: 10px;
+}
