--- a/styly.css
+++ b/styly.css
@@ -4,9 +4,13 @@ html {
   padding: 40px;
   width: 498px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
   background: linear-gradient(to bottom, #615dad, #ffc8da);
   color: #ffffff;
+}
+
+h1 {
+  font-size: 3rem;
 }
 
 
@@ -32,13 +36,14 @@ html {
 
 .info__nadpis {
   font-family: 'Lobster', cursive;
-  font-size: 5 rem;
+  margin-bottom: auto;
 }
 
 .info__text {
   align-items: center;
   margin: 22px;
   text-align: center;
+  line-height: 1.5;
 
 }
 
@@ -50,7 +55,7 @@ html {
 
 .buttons__rules {
   margin: 0;
-  padding: 10px;
+  padding: 15px;
   background-color: #1fcca4;
   border-top: 1px solid #283e50;
   text-decoration: none;
@@ -64,7 +69,7 @@ html {
 
 .buttons__play {
   margin: 0;
-  padding: 10px;
+  padding: 15px;
   background-color: #0197f6;
   text-decoration: none;
   color: #ffffff;
