--- a/styly.css
+++ b/styly.css
@@ -1,13 +1,21 @@
 html {
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
-  margin: 0 auto;
-  padding: 40px;
+
+}
+
+body {
   width: 498px;
   text-align: center;
   font-family: sans-serif;
   background: linear-gradient(to bottom, #615dad, #ffc8da);
   color: #ffffff;
+  margin: 0 auto;
+  padding: 80px;
+
 }
+
 
 h1 {
   font-size: 3rem;
