--- a/styly.css
+++ b/styly.css
@@ -3,10 +3,11 @@ html {
   height: 100%;
   box-sizing: border-box;
 
+
 }
 
 .container {
-  width: 400px;
+  width: 881px;
   text-align: center;
   font-family: sans-serif;
   background: linear-gradient(to bottom, #615dad, #ffc8da);
@@ -34,7 +35,7 @@ h1 {
 
 }
 
-.info__nadpis {
+.info__title {
   font-family: 'Lobster', cursive;
   margin-bottom: auto;
 }
@@ -85,9 +86,61 @@ h1 {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+
 }
 
 .pole {
   width: 2rem;
   border: 2 solid black;
+}
+
+.menu__buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px 30px 10px
+}
+
+.menu__buttons--turn {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-weight: bold;
+}
+
+.menu__buttons--turn img {
+  width: 80%;
+}
+
+.menu__buttons--home {
+  background-color: #1cbb96;
+  padding: 0.1rem;
+  border-radius: 2px;
+  align-self: flex-end;
+  margin-left: 716px;
+
+}
+
+.menu__buttons--home img {
+  width: 70%;
+
+}
+
+.menu__buttons--restart {
+  background-color: #0090e9;
+  padding: 0.1rem;
+  border-radius: 2px;
+  align-self: flex-end;
+
+
+}
+
+.menu__buttons--restart img {
+  width: 70%;
+}
+
+
+.pole {
+  width: 88px;
+  height: 88px;
+
 }
