--- a/styly.css
+++ b/styly.css
@@ -87,57 +87,59 @@ h1 {
   align-items: center;
   flex-wrap: wrap;
   padding-top: 1.5rem;
+}
 
 
 
-  .menu__buttons {
-    display: flex;
-    justify-content: space-between;
-  }
+.menu__buttons {
+  display: flex;
+  justify-content: space-between;
+}
 
-  .menu__buttons--turn {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    font-weight: bold;
-  }
+.menu__buttons--turn {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-weight: bold;
+}
 
-  .menu__buttons--turn img {
-    width: 80%;
-  }
+.menu__buttons--turn img {
+  width: 80%;
+}
 
-  .menu__buttons--home {
-    background-color: #1cbb96;
-    padding: 0.1rem;
-    border-radius: 2px;
-    align-self: flex-end;
-    margin-left: 700px;
-
-
-  }
-
-  .menu__buttons--home img {
-    width: 100%;
-
-  }
-
-  .menu__buttons--restart {
-    background-color: #0090e9;
-    padding: 0.1rem;
-    border-radius: 2px;
-    align-self: flex-end;
+.menu__buttons--home {
+  background-color: #1cbb96;
+  padding: 0.1rem;
+  border-radius: 2px;
+  align-self: flex-end;
+  margin-left: 700px;
 
 
-  }
+}
 
-  .menu__buttons--restart img {
-    width: 100%;
+.menu__buttons--home img {
+  width: 100%;
 
-  }
+}
+
+.menu__buttons--restart {
+  background-color: #0090e9;
+  padding: 0.1rem;
+  border-radius: 2px;
+  align-self: flex-end;
 
 
-  .pole {
-    width: 88px;
-    height: 88px;
-    border: 1px solid black;
-  }
+}
+
+.menu__buttons--restart img {
+  width: 100%;
+
+}
+
+
+.pole {
+  width: 88px;
+  height: 88px;
+  border: 1px solid black;
+  background-color: #e5cce1;
+}
