--- a/styly.css
+++ b/styly.css
@@ -17,6 +17,7 @@ html {
   margin: 0 auto;
   padding: 80px;
 
+
 }
 
 h1 {
@@ -41,7 +42,7 @@ h1 {
 
 .info__title {
   font-family: 'Lobster', cursive;
-  margin-bottom: auto;
+  margin: auto;
 }
 
 .info__text {
@@ -101,12 +102,14 @@ h1 {
   border-radius: 2px;
   gap: 5px;
 
+
+
 }
 
 .menu__buttons--turn {
-  /* display: flex; */
   align-items: center;
   font-weight: bold;
+
 }
 
 
@@ -114,10 +117,7 @@ h1 {
   background-color: #1cbb96;
   padding: 0.1rem;
   align-self: flex-end;
-  margin-left: 700px;
   width: 100%;
-
-
 
 
 }
@@ -125,7 +125,6 @@ h1 {
 .menu__buttons--home img {
   width: 80%;
   padding: 5px;
-
 }
 
 .menu__buttons--home:hover {
@@ -138,7 +137,6 @@ h1 {
   border-radius: 2px;
   align-self: flex-end;
   width: 100%;
-
 
 }
 
@@ -165,4 +163,10 @@ h1 {
 
 button:hover {
   background: rgba(229, 204, 225, 0.8)
+}
+
+.right-side {
+  display: flex;
+  justify-content: end;
+  gap: 5px;
 }
