--- a/styly.css
+++ b/styly.css
@@ -1,6 +1,6 @@
 html {
   max-width: 80vmin;
-  height: 100%;
+  min-height: 100%;
   box-sizing: border-box;
   background: linear-gradient(to bottom, #615dad, #ffc8da)
 }
@@ -9,7 +9,6 @@ html {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* max-width: 881px; */
   width: 100%;
   text-align: center;
   font-family: sans-serif;
@@ -17,11 +16,10 @@ html {
   margin: 0 auto;
   padding: 80px;
 
-
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 3.5rem;
 
 }
 
@@ -94,8 +92,6 @@ h1 {
   padding-top: 1.5rem;
 }
 
-
-
 .menu__buttons {
   display: flex;
   justify-content: space-between;
@@ -155,6 +151,7 @@ h1 {
   height: 8vmin;
   border: 1px solid black;
   background-color: #e5cce1;
+
 }
 
 .pole:focus {
@@ -168,5 +165,5 @@ button:hover {
 .right-side {
   display: flex;
   justify-content: end;
-  gap: 5px;
+  gap: 0.5rem;
 }
