--- a/styly.css
+++ b/styly.css
@@ -167,17 +167,13 @@ h1 {
   width: 8vmin;
   height: 8vmin;
   border: 1px solid rgb(83, 65, 83);
-  background-color: #e5cce1;
-
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: rgba(229, 204, 225, 0.6);
 }
 
-/* .box:focus {
-  background-color: rgba(229, 204, 225, 0.8);
+.box:hover {
+  background-color: rgba(229, 204, 225, 0.8)
 }
-
-button:hover {
-  background: rgba(229, 204, 225, 0.8)
-} */
 
 /* hra */
 
